# internal/app/api/server.go
@@ -74,6 +74,7 @@ func (s *Server) StartServer() {
 		authorized.GET("/keys", s.GetKeys)
 		authorized.GET("/keys/find", s.FindKeys)
 		authorized.DELETE("/keys/:id", s.DelKey)
+		authorized.POST("/keys/delete", s.DelKeys)
 		authorized.GET("/list/key/:id", s.ListGet)
 		authorized.DELETE("/list/key/:id", s.ListDel)
 		authorized.POST("/list/rpush/key/:id", s.ListRPush)
